sidebar: fix subtitle icon spacing

--- a/src/styles/sidebar/sidebar-link.css
+++ b/src/styles/sidebar/sidebar-link.css
@@ -79,6 +79,7 @@
 
 .subtitle svg {
   margin-left: var(--spacing-tiny);
+  margin-right: 0;
 }
 
 .collapsed .title {
